Projeto/Compilador/tests/cases/ok/Short_circuit_AND_OR.pas
program TSC;
var x: integer; b: boolean;
begin
  x := 0;
  b := (x <> 0) and ((10 div x) > 1);
  writeln('ok');
end.
