Projeto/Compilador/tests/cases/error/T18.pas
program T18;
var r: real;
begin
  r := 5.0 div 2.0;
end.
